--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "fs-extra": "^10.1.0",
+    "nodemailer": "^6.7.8",
     "puppeteer": "^16.1.0"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
