--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "fs-extra": "^10.1.0",
     "nodemailer": "^6.7.8",
-    "puppeteer": "^16.1.0"
+    "puppeteer": "^16.1.0",
+    "speed-test": "^3.0.0"
   },
   "devDependencies": {
     "prettier": "2.7.1"
