--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "fs-extra": "^10.1.0",
+    "node-logger": "^0.0.1",
     "nodemailer": "^6.7.8",
-    "puppeteer": "^16.1.0",
-    "speed-test": "^3.0.0"
+    "puppeteer": "^16.1.0"
   },
   "devDependencies": {
     "prettier": "2.7.1"
