--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "fs-extra": "^10.1.0",
+    "ng-speed-test": "^2.3.2",
     "node-logger": "^0.0.1",
     "nodemailer": "^6.7.8",
-    "puppeteer": "^16.1.0"
+    "puppeteer": "^16.1.0",
+    "speedtest-net": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "2.7.1"
